Fix horizontal scroll

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,7 +107,7 @@ span.header-span:hover {
 
 .split {
 	background-color:  #ffffff;
-	width: 800px;
+	width: 798px;
 	height: 5px;
 	position: relative;
 	margin-left: auto;
